--- a/am/src/app/create-asset/create-asset.component.html
+++ b/am/src/app/create-asset/create-asset.component.html
@@ -1,18 +1,13 @@
 <div class="example-container">
     <form #create="ngForm" (ngSubmit)="onSubmit(create.value)">
         <mat-form-field appearance="fill">
-            <mat-label>ID</mat-label>
-            <input matInput name="id" [(ngModel)]="id">
-        </mat-form-field>
-        <br>
-        <mat-form-field appearance="fill">
             <mat-label>Title</mat-label>
             <input matInput name="title" [(ngModel)]="title">
         </mat-form-field>
         <br>
         <mat-form-field appearance="fill">
             <mat-label>No of Units</mat-label>
-            <input matInput name="unit" (ngModel)="unit">
+            <input matInput name="unit" (ngModel)="unit" type="number">
         </mat-form-field>
         <br>
         <mat-form-field appearance="fill">
@@ -23,6 +18,3 @@
         <button mat-raised-button>Create Asset</button>
     </form>
 </div>
-
-<p>First name value: {{ title}}</p>
-<p>Form value: {{ create.value | json }}</p>
