--- a/am/src/app/header/header.component.html
+++ b/am/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <p>
     <mat-toolbar>
-        <span>My Application</span>
+        <mat-icon matListIcon>computer</mat-icon>
+        <span class="asset">Asset Management</span>
     </mat-toolbar>
 </p>
