--- a/am/src/app/nav/nav.component.html
+++ b/am/src/app/nav/nav.component.html
@@ -7,13 +7,13 @@
         <mat-icon matListIcon>headset</mat-icon>
         Asset
     </a>
-    <!-- <a mat-list-item role="listitem" (click)="onSelect(asset)" *ngFor="let asset of assestData">
-        <mat-icon matListIcon>{{asset.title}}</mat-icon>
-        {{asset.title | titlecase}}
-    </a> -->
     <a mat-list-item routerLink="/asset/create">
         <mat-icon matListIcon>add</mat-icon>
         Create
+    </a>
+    <a mat-list-item routerLink="/about">
+        <mat-icon matListIcon>menu_book</mat-icon>
+        About
     </a>
 </mat-nav-list>
   
