--- a/am/src/app/all-asset/all-asset.component.css
+++ b/am/src/app/all-asset/all-asset.component.css
@@ -1,29 +1,14 @@
 .example-card {
-    max-width: 40%;
     margin-right: 10%;
+    float: left;
 }
 
-.asset-card {
-    display: flex;
-    align-items: stretch;
-    text-align: center;
-    justify-content: center;
+.viewport {
+    height: 450px;
 }
-
-mat-card-img {
-    object-fit: cover;
-    /*this makes the image in src fit to the size specified below*/
-    max-height: 60%;
-}
-
-.assetImg {
-    height: 100%;
-    width: 50%;
-}
-
-.imgDiv {
-    height: 100%;
-    width: 100%;
+.example-card {
+    margin-right: 10%;
+    float: left;
 }
 
 .viewport {
