--- a/am/src/app/app.component.html
+++ b/am/src/app/app.component.html
@@ -7,12 +7,11 @@
   </mat-grid-tile>
   <mat-grid-tile [colspan]="5" [rowspan]="4">
     <div class="asset">
-      <!-- <app-create-asset></app-create-asset> -->
       <router-outlet></router-outlet>
     </div>
   </mat-grid-tile>
   <mat-grid-tile [colspan]="6" [rowspan]="1">
-    2
+    <app-footer></app-footer>
   </mat-grid-tile>
 </mat-grid-list>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
