--- a/am/src/app/footer/footer.component.css
+++ b/am/src/app/footer/footer.component.css
@@ -1,12 +1,8 @@
 .mat-toolbar {
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     z-index: 2;
     width: 100% !important;
     justify-content: center;
-}
-
-.mat-icon {
-    margin-right: 1%;
 }
