--- a/am/src/app/page-not-found/page-not-found.component.html
+++ b/am/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,2 @@
 <h1>Page Not Found</h1>
-<button mat-raised-button [routerLink]="'/home'">Home</button>
+<button mat-raised-button [routerLink]="'/asset'">Asset</button>
